--- a/CoreApp/CoreApp.Web/ClientApp/package.json
+++ b/CoreApp/CoreApp.Web/ClientApp/package.json
@@ -24,12 +24,15 @@
     ]
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.11.2",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
     "formik": "^2.2.6",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
