combined with backend codes

--- a/CoreApp/CoreApp.Web/appsettings.json
+++ b/CoreApp/CoreApp.Web/appsettings.json
@@ -1,10 +1,22 @@
 {
+  "AppSettings": {
+    "Secret": "CloudPlus Team Project",
+    "smtp": {
+      "SMTPServer": "smtp.gmail.com",
+      "SMTPPort": 587,
+      "FromEmail": "enovatexhuat@gmail.com",
+      "password": "Smtp8+11"
+    }
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Server=huatxennovate.postgres.database.azure.com;Port=5432;Database=main;User Id=Daren_admin@huatxennovate;Password=huatxennovate8&11;"
+  }
 }
