--- a/CoreApp/CoreApp.Web/CoreApp.Web.csproj
+++ b/CoreApp/CoreApp.Web/CoreApp.Web.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\dialogs\NewFolder\" />
     <Folder Include="Helpers\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
